<resources>
    <string name="app_name">MakasibBasita</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet,
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="you_don_t_have_an_account_register_now">You don\'t have an account, register now???</string>
    <string name="do_you_already_have_an_account_login_now">Do you already have an account? login Now !!</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="welcome_back">Welcome back</string>
    <string name="watch_ads">Watch ads</string>
    <string name="task">Task</string>
    <string name="home">Home</string>
    <string name="redeem">Redeem</string>

    <string name="profile">Profile</string>
    <string name="my_points">My Points:</string>
    <string name="my_coins">My Coins:</string>
    <string name="email">Email</string>
    <string name="old_user_login_now">old user ?? Login Now</string>
</resources>