<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_edit_text_background"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <EditText
                    android:id="@+id/username_field"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/username" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_edit_text_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            >

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password" />
        </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circular_button_background"
                android:textColor="@color/white"
                android:text="@string/login" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_regster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:clickable="true"
            android:background="#eef5f7"
            android:backgroundTint="#eef5f7"
            android:src="@drawable/baseline_person_24"
            android:contentDescription="New user ?? Register Now"
            android:focusable="true" />


    </RelativeLayout>
</FrameLayout>